Remove an `overflow-x: hidden` from `restyle.less`. (Fixes #224) (#225)
- Allow the user to freely scroll across an entirely new axis!!
- This was probably in place for the "Go to mobile site!" banner.

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -45,7 +45,6 @@ body.restyle {
   font-style: normal;
   line-height: 1.5;
   min-width: @containerWidth;
-  overflow-x: hidden;
 }
 
 h1,
